# QFeldspar

./: .ghci  Instructions.md  QFeldspar.cabal  README.md  Script  Test.hs  clean  countlines  rundocker  setpermissions
Examples/: Compare.hs
Examples/C/: header.h
Examples/CRC/: CDSL.hs  QDSL.hs
Examples/DSLDISS/: Live.hs
Examples/FFT/: CDSL.hs  QDSL.hs
Examples/IPBW/: CDSL.hs  QDSL.hs
Examples/IPGray/: CDSL.hs  QDSL.hs
Examples/ImageProcessing/: Grayscale.hs  GrayscaleFunctional.hs  Prelude.hs  Swirl.hs
Examples/ImageProcessing/GeneratedCode/: ToRunGeneratedExecutables.txt
Examples/Power/: CDSL.hs  Haskell.hs  QDSL.hs
Examples/Prelude/: CDSL.hs  QDSL.hs
Examples/Swirl/: Haskell.hs  QDSL.hs
Examples/Windowing/: CDSL.hs  QDSL.hs
Experiment/: CSV  CSV.hs  Common.hs  Experiment_2014-10-19-16-41-25.csv  Experiment_2014-11-10-23-52-44.csv  Experiment_2015-02-24-04-12-08.csv  Experiment_2015-02-27-20-07-52.csv  Gen  GenExperiment.hs  Process  Process.hs  header.h  ppm.h
Experiment/Experiment_2014-10-19-16-41-25/: result  timeCRCCDSLFalseCC  timeCRCCDSLFalseCR  timeCRCCDSLFalseHC  timeCRCCDSLFalseHR  timeCRCCDSLTrueCC  timeCRCCDSLTrueCR  timeCRCCDSLTrueHC  timeCRCCDSLTrueHR  timeCRCQDSLFalseCC  timeCRCQDSLFalseCR  timeCRCQDSLFalseHC  timeCRCQDSLFalseHR  timeCRCQDSLTrueCC  timeCRCQDSLTrueCR  timeCRCQDSLTrueHC  timeCRCQDSLTrueHR  timeFFTCDSLFalseCC  timeFFTCDSLFalseHC  timeFFTCDSLFalseHR  timeFFTCDSLTrueCC  timeFFTCDSLTrueCR  timeFFTCDSLTrueHC  timeFFTCDSLTrueHR  timeFFTQDSLFalseCC  timeFFTQDSLFalseCR  timeFFTQDSLFalseHC  timeFFTQDSLFalseHR  timeFFTQDSLTrueCC  timeFFTQDSLTrueCR  timeFFTQDSLTrueHC  timeFFTQDSLTrueHR  timeIPBWCDSLFalseCC  timeIPBWCDSLFalseCR  timeIPBWCDSLFalseHC  timeIPBWCDSLTrueCC  timeIPBWCDSLTrueCR  timeIPBWCDSLTrueHC  timeIPBWQDSLFalseCC  timeIPBWQDSLFalseCR  (+38 more)
Experiment/Experiment_2014-11-10-23-52-44/: result  timeCRCCDSLFalseCC  timeCRCCDSLFalseCR  timeCRCCDSLFalseHC  timeCRCCDSLFalseHR  timeCRCCDSLTrueCC  timeCRCCDSLTrueCR  timeCRCCDSLTrueHC  timeCRCCDSLTrueHR  timeCRCQDSLFalseCC  timeCRCQDSLFalseCR  timeCRCQDSLFalseHC  timeCRCQDSLFalseHR  timeCRCQDSLTrueCC  timeCRCQDSLTrueCR  timeCRCQDSLTrueHC  timeCRCQDSLTrueHR  timeFFTCDSLFalseCC  timeFFTCDSLFalseHC  timeFFTCDSLFalseHR  timeFFTCDSLTrueCC  timeFFTCDSLTrueCR  timeFFTCDSLTrueHC  timeFFTCDSLTrueHR  timeFFTQDSLFalseCC  timeFFTQDSLFalseCR  timeFFTQDSLFalseHC  timeFFTQDSLFalseHR  timeFFTQDSLTrueCC  timeFFTQDSLTrueCR  timeFFTQDSLTrueHC  timeFFTQDSLTrueHR  timeIPBWCDSLFalseCC  timeIPBWCDSLFalseCR  timeIPBWCDSLFalseHC  timeIPBWCDSLTrueCC  timeIPBWCDSLTrueCR  timeIPBWCDSLTrueHC  timeIPBWQDSLFalseCC  timeIPBWQDSLFalseCR  (+37 more)
Experiment/Experiment_2015-02-24-04-12-08/: result  timeCRCCDSLTrueCC  timeCRCCDSLTrueCR  timeCRCCDSLTrueHC  timeCRCCDSLTrueHR  timeCRCQDSLTrueCC  timeCRCQDSLTrueCR  timeCRCQDSLTrueHC  timeCRCQDSLTrueHR  timeFFTCDSLTrueCC  timeFFTCDSLTrueCR  timeFFTCDSLTrueHC  timeFFTCDSLTrueHR  timeFFTQDSLTrueCC  timeFFTQDSLTrueCR  timeFFTQDSLTrueHC  timeFFTQDSLTrueHR  timeIPBWCDSLTrueCC  timeIPBWCDSLTrueCR  timeIPBWCDSLTrueHC  timeIPBWQDSLTrueCC  timeIPBWQDSLTrueCR  timeIPBWQDSLTrueHC  timeIPBWQDSLTrueHR  timeIPGrayCDSLTrueCC  timeIPGrayCDSLTrueCR  timeIPGrayCDSLTrueHC  timeIPGrayCDSLTrueHR  timeIPGrayQDSLTrueCC  timeIPGrayQDSLTrueCR  timeIPGrayQDSLTrueHC  timeIPGrayQDSLTrueHR  timeWindowingCDSLTrueCC  timeWindowingCDSLTrueCR  timeWindowingCDSLTrueHC  timeWindowingCDSLTrueHR  timeWindowingQDSLTrueCC  timeWindowingQDSLTrueCR  timeWindowingQDSLTrueHC  timeWindowingQDSLTrueHR
Experiment/Experiment_2015-02-27-20-07-52/: result  timeCRCCDSLTrueCC  timeCRCCDSLTrueCR  timeCRCCDSLTrueHC  timeCRCCDSLTrueHR  timeCRCQDSLTrueCC  timeCRCQDSLTrueCR  timeCRCQDSLTrueHC  timeCRCQDSLTrueHR  timeFFTCDSLTrueCC  timeFFTCDSLTrueCR  timeFFTCDSLTrueHC  timeFFTCDSLTrueHR  timeFFTQDSLTrueCC  timeFFTQDSLTrueCR  timeFFTQDSLTrueHC  timeFFTQDSLTrueHR  timeIPBWCDSLTrueCC  timeIPBWCDSLTrueCR  timeIPBWCDSLTrueHC  timeIPBWQDSLTrueCC  timeIPBWQDSLTrueCR  timeIPBWQDSLTrueHC  timeIPBWQDSLTrueHR  timeIPGrayCDSLTrueCC  timeIPGrayCDSLTrueCR  timeIPGrayCDSLTrueHC  timeIPGrayCDSLTrueHR  timeIPGrayQDSLTrueCC  timeIPGrayQDSLTrueCR  timeIPGrayQDSLTrueHC  timeWindowingCDSLTrueCC  timeWindowingCDSLTrueCR  timeWindowingCDSLTrueHC  timeWindowingCDSLTrueHR  timeWindowingQDSLTrueCC  timeWindowingQDSLTrueCR  timeWindowingQDSLTrueHC  timeWindowingQDSLTrueHR
QFeldspar/: CDSL.hs  CSE.hs  ChangeMonad.hs  Compiler.hs  Conversion.hs  ErrorMonad.hs  Eta._hs  Eta.hs  Existential.hs  Inference.hs  InferenceMonad.hs  Magic.hs  MyPrelude.hs  NameMonad.hs  Normalisation.hs  Normalization.hs  QDSL.hs  Simplification.hs  Simplify.hs  Singleton.hs  Solver.hs  TraversalGenerator.hs  TypeChecking.hs  VanillaPrelude.hs  header.h
QFeldspar/CSE/: GADTFirstOrder.hs  GADTHigherOrder.hs  MiniFeldspar.hs
QFeldspar/Environment/: Conversion.hs  Map.hs  Plain.hs  Scoped.hs  Typed.hs
QFeldspar/Expression/: ADTUntypedDebruijn.hs  ADTUntypedNamed.hs  ADTValue.hs  C.hs  Conversion.hs  GADTFirstOrder.hs  GADTHigherOrder.hs  GADTTyped.hs  GADTValue.hs  MiniFeldspar.hs  TemplateHaskell.hs
QFeldspar/Expression/Conversions/: CodeGeneration.hs  EtaPrims.hs  Lifting.hs  NameResolution.hs  Normalisation.hs  Reification.hs  ScopeWithnessing.hs  TypeInference.hs  TypeWithnessing.hs  (+1 more)
QFeldspar/Literal/: ADT.hs  GADT.hs
QFeldspar/Nat/: ADT.hs  Conversion.hs  GADT.hs  TH.hs
QFeldspar/Normalisation/: GADTFirstOrder.hs  GADTHigherOrder.hs  MiniFeldspar.hs
QFeldspar/Prelude/: Environment.hs  Haskell.hs  HaskellEnvironment.hs  MiniFeldspar.hs  MiniWellScoped.hs  TemplateHaskell.hs
QFeldspar/Simplification/: GADTFirstOrder.hs  GADTHigherOrder.hs  MiniFeldspar.hs
QFeldspar/Type/: ADT.hs  Conversion.hs  GADT.hs  Herbrand.hs
QFeldspar/TypeChecking/: Feldspar.hs
QFeldspar/Variable/: Conversion.hs  Plain.hs  Scoped.hs  Typed.hs
Tests/: ADTUntypedDebruijn.hs  ADTUntypedNamed.hs  CompareExamples.hs  Conversion.hs  Examples.hs  GADTFirstOrder.hs  GADTHigherOrder.hs  GADTTyped.hs  GADTUntypedDebruijn.hs  MiniFeldspar.hs  MiniWellScoped.hs  PolyMorphism.hs  TemplateHaskell.hs
(+78 files in other folders)
