name:                QFeldspar
version:             0.1.0.0
synopsis:            QFeldspar: a QDSL front-end for MiniFeldspar
homepage:            https://github.com/shayan-najd/QFeldspar
license:             GPL-3
license-file:        LICENSE
author:              Shayan Najd
maintainer:          sh dot najd att ed dot ac dot uk
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options: -Wall -fno-warn-orphans -fcontext-stack=40
  default-extensions:
     NoMonomorphismRestriction,
     PolyKinds,
     DataKinds,
     ConstraintKinds,
     TypeOperators,
     TypeFamilies,
     GADTs,
     FlexibleInstances,
     FlexibleContexts,
     StandaloneDeriving,
     DeriveFoldable,
     DeriveFunctor,
     DeriveTraversable,
     DeriveDataTypeable,
     DeriveGeneric,
     NoUndecidableInstances,
     MonoLocalBinds,
     ScopedTypeVariables,
     MultiParamTypeClasses,
     TemplateHaskell,
     Rank2Types,
     PatternSynonyms,
     ViewPatterns,
     NoImplicitPrelude,
     MultiWayIf
  exposed-modules:
     QFeldspar.NameMonad,
     QFeldspar.InferenceMonad,
     QFeldspar.ChangeMonad,
     QFeldspar.Inference,
     QFeldspar.Magic,
     QFeldspar.QDSL,
     QFeldspar.Singleton,
     QFeldspar.TraversalGenerator,
     QFeldspar.MyPrelude,
     QFeldspar.Existential,
     QFeldspar.Solver,
     QFeldspar.Conversion,
     QFeldspar.CDSL,
     QFeldspar.Compiler,
     QFeldspar.ErrorMonad,
     QFeldspar.Type.GADT,
     QFeldspar.Type.Herbrand,
     QFeldspar.Type.Conversion,
     QFeldspar.Type.ADT,
     QFeldspar.CSE,
     QFeldspar.Normalisation,
     QFeldspar.Literal.ADT,
     QFeldspar.Literal.GADT,
     QFeldspar.Expression.GADTHigherOrder,
     QFeldspar.Expression.GADTValue,
     QFeldspar.Expression.ADTValue,
     QFeldspar.Expression.C,
     QFeldspar.Expression.GADTFirstOrder,
     QFeldspar.Expression.ADTUntypedNamed,
     QFeldspar.Expression.MiniFeldspar,
     QFeldspar.Expression.ADTUntypedDebruijn,
     QFeldspar.Expression.Conversion,
     QFeldspar.Expression.GADTTyped,
     QFeldspar.Expression.Utils.MiniFeldspar,
     QFeldspar.Expression.Utils.GADTFirstOrder,
     QFeldspar.Expression.Utils.ADTUntypedNamed,
     QFeldspar.Expression.Utils.ADTUntypedDebruijn,
     QFeldspar.Expression.Utils.GADTTyped,
     QFeldspar.Expression.Utils.TemplateHaskell,
     QFeldspar.Expression.Utils.Equality.GADTHigherOrder,
     QFeldspar.Expression.Utils.Equality.MiniFeldspar,
     QFeldspar.Expression.Utils.Equality.GADTFirstOrder,
     QFeldspar.Expression.Utils.Show.Common,
     QFeldspar.Expression.Utils.Show.GADTHigherOrder,
     QFeldspar.Expression.Utils.Show.MiniFeldspar,
     QFeldspar.Expression.Utils.Show.GADTFirstOrder,
     QFeldspar.Expression.Utils.Reuse.MiniFeldspar,
     QFeldspar.Expression.Utils.Reuse.GADTHigherOrder,
     QFeldspar.Expression.Conversions.EtaPrims,
     QFeldspar.Expression.Conversions.Unquoting,
     QFeldspar.Expression.Conversions.TypeWithnessing,
     QFeldspar.Expression.Conversions.Normalisation,
     QFeldspar.Expression.Conversions.Lifting,
     QFeldspar.Expression.Conversions.TypeInference,
     QFeldspar.Expression.Conversions.CodeGeneration,
     QFeldspar.Expression.Conversions.ScopeWithnessing,
     QFeldspar.Expression.Conversions.NameResolution,
     QFeldspar.Expression.Conversions.Evaluation.GADTHigherOrder,
     QFeldspar.Expression.Conversions.Evaluation.GADTFirstOrder,
     QFeldspar.Expression.Conversions.Evaluation.ADTUntypedNamed,
     QFeldspar.Expression.Conversions.Evaluation.MiniFeldspar,
     QFeldspar.Expression.Conversions.Evaluation.ADTUntypedDebruijn,
     QFeldspar.Expression.Conversions.Evaluation.GADTTyped,
     QFeldspar.Nat.TH,
     QFeldspar.Nat.GADT,
     QFeldspar.Nat.Conversion,
     QFeldspar.Nat.ADT,
     QFeldspar.Simplification,
     QFeldspar.Variable.Typed,
     QFeldspar.Variable.Plain,
     QFeldspar.Variable.Scoped,
     QFeldspar.Variable.Conversion,
     QFeldspar.Environment.Typed,
     QFeldspar.Environment.Map,
     QFeldspar.Environment.Plain,
     QFeldspar.Environment.Scoped,
     QFeldspar.Environment.Conversion,
     QFeldspar.Prelude.MiniFeldspar,
     QFeldspar.Prelude.HaskellEnvironment,
     QFeldspar.Prelude.Environment,
     QFeldspar.Prelude.Haskell,
     Language.Haskell.TH.Desugar.MiniCore
  other-modules:
     Experiment.GenExperiment,
     Experiment.Process,
     Experiment.CSV,
     Experiment.Common,
     Examples.IPGray.QDSL,
     Examples.IPGray.CDSL,
     Examples.IPBW.QDSL,
     Examples.IPBW.CDSL,
     Examples.CRC.QDSL,
     Examples.CRC.CDSL,
     Examples.Power.QDSL,
     Examples.Power.Haskell,
     Examples.Power.CDSL,
     Examples.Prelude.QDSL,
     Examples.Prelude.CDSL,
     Examples.FFT.QDSL,
     Examples.FFT.CDSL,
     Examples.Windowing.QDSL,
     Examples.Windowing.CDSL,
     Tests.GADTHigherOrder,
     Tests.GADTFirstOrder,
     Tests.ADTUntypedNamed,
     Tests.MiniFeldspar,
     Tests.ADTUntypedDebruijn,
     Tests.Conversion,
     Tests.GADTTyped,
     Tests.TemplateHaskell,
     Tests.Examples,
     Tests.CompareExamples,
     Test
  build-depends:
     base             >=4.7,
     array            >=0.5,
     mtl              >=2.2,
     template-haskell >=2.9,
     text             >=1.2,
     syb              >=0.5,
     pretty           >=1.1,
     directory        >=1.2,
     th-desugar       >=1.5,
     ghc-prim         >=0.3,
     th-orphans       >=0.12,
     containers       >=0.5,
     process          >=1.2

  default-language:    Haskell2010